# goit_python_web_hw_13

./: README.md  docker-compose-0.yml  docker-compose-db.yml  docker-compose.yml  pyproject.toml  requirements.txt
doc/dot-env-example/: env-dev  env-prod
hw13/: main.py
hw13/src/conf/: config.py
hw13/src/database/: db.py  models.py
hw13/src/repository/: auth.py  contacts.py  users.py
hw13/src/routes/: auth.py  contacts.py
hw13/src/services/: emails.py  roles.py
hw13/src/services/auth/: auth.py  auth_token.py
hw13/src/shemas/: auth.py  users.py
hw13/src/utils/: seed.py
hw13/static/client/: index.html
hw13/templates/: index.html
scripts/: docker_build_docker-compose.cmd  docker_run_db.cmd  docker_run_docker-compose.cmd  runserver.cmd  sql_alebic_init.cmd  sql_upgrade.cmd
